# paper-collector-v2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: demo_arxiv.py  demo_bibtex.py  demo_dblp.py  demo_pubmed.py  demo_semantic_scholar.py
src/paper_collector/: config.py
src/paper_collector/core/: paper.py
src/paper_collector/enrich/: bibtex.py  metadata.py
src/paper_collector/sources/: arxiv.py  base.py  dblp.py  pubmed.py  semantic_scholar.py
tests/: test_arxiv.py  test_bibtex.py  test_config.py  test_dblp.py  test_metadata.py  test_paper.py  test_pubmed.py  test_semantic_scholar.py
tests/integration/: test_arxiv_live.py  test_crossref_live.py  test_dblp_live.py  test_pubmed_live.py  test_semantic_scholar_live.py
