[project]
name = "paper-collector"
version = "0.1.0"
description = "Modular AI-assisted paper collection across academic databases"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Wonjoong Kim" },
]
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-requests>=2.33.0.20260513",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_collector"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that hit live external APIs (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
